--- a/simple_gramps_data_parser/templates/event_list.html
+++ b/simple_gramps_data_parser/templates/event_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<table class="table-striped">
+<table class="table table-striped table-hover">
   <tr>
     <th>ID</th>
     <th>Date</th>
@@ -24,7 +24,11 @@
       {{ obj.date }}
     </td>
     <td>
-      <a href="{{ url_for('place_detail', obj_id=obj.place.id) }}">{{ obj.place }}</a>
+      {% if obj.place %}
+        <a href="{{ url_for('place_detail', obj_id=obj.place.id) }}">{{ obj.place }}</a>
+      {% else %}
+        ?
+      {% endif %}
     </td>
     <td>
       {{ obj.type }}
