Added an example of the map within normal UI

--- a/simple_gramps_data_parser/templates/map_circles.html
+++ b/simple_gramps_data_parser/templates/map_circles.html
@@ -59,7 +59,7 @@ function initialize() {
             fillOpacity: 0.35,
             map: map,
             center: place.center,
-            radius: Math.sqrt(place.event_cnt) * 2000
+            radius: Math.sqrt(place.event_cnt) * 2000,
         };
         console.log(place, circle_options);
         // Add the circle for this city to the map.
