Fix coords and dates, etc.

--- a/simple_gramps_data_parser/templates/base.html
+++ b/simple_gramps_data_parser/templates/base.html
@@ -36,6 +36,13 @@
               <li><a href="{{ url_for('family_index') }}">Families</a></li>
               <li><a href="{{ url_for('event_index') }}">Events</a></li>
               <li><a href="{{ url_for('place_index') }}">Places</a></li>
+              <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Maps <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="{{ url_for('map_circles_integrated') }}">Event Density</a></li>
+                    <li><a href="{{ url_for('map_heatmap') }}">Heat</a></li>
+                  </ul>
+                </li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -55,9 +62,9 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!-- Latest compiled and minified Bootstrap JavaScript -->
-    <!--script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
