Add Source and Citation models/views/templates

--- a/simple_gramps_data_parser/templates/home.html
+++ b/simple_gramps_data_parser/templates/home.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<a href="{{ url_for('person_index') }}">People</a>
-<a href="{{ url_for('family_index') }}">Families</a>
-<a href="{{ url_for('event_index') }}">Events</a>
-<a href="{{ url_for('place_index') }}">Places</a>
+<a href="{{ url_for('person_list') }}">People</a>
+<a href="{{ url_for('family_list') }}">Families</a>
+<a href="{{ url_for('event_list') }}">Events</a>
+<a href="{{ url_for('place_list') }}">Places</a>
 
 {% endblock %}
