--- a/simple_gramps_data_parser/templates/base.html
+++ b/simple_gramps_data_parser/templates/base.html
@@ -32,10 +32,11 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="{{ url_for('person_index') }}">People</a></li>
-              <li><a href="{{ url_for('family_index') }}">Families</a></li>
-              <li><a href="{{ url_for('event_index') }}">Events</a></li>
-              <li><a href="{{ url_for('place_index') }}">Places</a></li>
+              <li><a href="{{ url_for('person_list') }}">People</a></li>
+              <li><a href="{{ url_for('family_list') }}">Families</a></li>
+              <li><a href="{{ url_for('event_list') }}">Events</a></li>
+              <li><a href="{{ url_for('place_list') }}">Places</a></li>
+              <li><a href="{{ url_for('source_list') }}">Sources</a></li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Maps <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
