--- a/simple_gramps_data_parser/templates/event_list.html
+++ b/simple_gramps_data_parser/templates/event_list.html
@@ -41,17 +41,9 @@
     <td>
       {{ obj.summary }}
     </td>
+    {# <td>{{ obj.place._data.coord if obj.place else '' }}</td> #}
   </tr>
 {% endfor %}
 </table>
-
-<ul>
-{% for obj in object_list %}
-    <li>
-        <a href="{{ url_for('event_detail', obj_id=obj.id) }}">{{ obj }}</a>
-        {#<code>{{ obj._data|pprint }}</code>#}
-    </li>
-{% endfor %}
-</ul>
 
 {% endblock %}
