--- a/simple_gramps_data_parser/templates/base.html
+++ b/simple_gramps_data_parser/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Фамилия Аузбикович</title>
+    <title>WhatTheFamily</title>
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -17,6 +17,9 @@
             margin-top: 50px;
         }
     </style>
+
+    {% block head %}
+    {% endblock %}
   </head>
   <body>
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
