Make JS vars available for console debug

--- a/simple_gramps_data_parser/templates/tree_orgchart.html
+++ b/simple_gramps_data_parser/templates/tree_orgchart.html
@@ -9,17 +9,21 @@
   <script type="text/javascript">
     var DATA_JSON_URL = '/orgchart/data';
 
+    var chart;
+    var data;
+
     google.load("visualization", "1", {packages:["orgchart"]});
     google.setOnLoadCallback(function () {
       $.getJSON(DATA_JSON_URL, function(json_data){
-        var data = new google.visualization.DataTable();
+        data = new google.visualization.DataTable();
+
         data.addColumn('string', 'person_id');
         data.addColumn('string', 'father_id');    // no f...ng way to show mother
         data.addColumn('string', 'ToolTip');
 
         data.addRows(json_data);
 
-        var chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
+        chart = new google.visualization.OrgChart(document.getElementById('chart_div'));
         chart.draw(data, {
             allowHtml: true,
         });
