--- a/simple_gramps_data_parser/templates/base.html
+++ b/simple_gramps_data_parser/templates/base.html
@@ -40,6 +40,7 @@
               <li><a href="{{ url_for('event_list') }}">Events</a></li>
               <li><a href="{{ url_for('place_list') }}">Places</a></li>
               <li><a href="{{ url_for('source_list') }}">Sources</a></li>
+              <li><a href="{{ url_for('orgchart') }}">Org Chart</a></li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Maps <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
