Add FamilyTreeJS/AJAX experiment.  Order matters, thats a bug

--- a/wtfamily/templates/base.html
+++ b/wtfamily/templates/base.html
@@ -71,5 +71,8 @@
 
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+    {% block foot %}
+    {% endblock %}
   </body>
 </html>
