--- a/wtfamily/templates/base.html
+++ b/wtfamily/templates/base.html
@@ -40,8 +40,14 @@
               <li><a href="{{ url_for('event_list') }}">Events</a></li>
               <li><a href="{{ url_for('place_list') }}">Places</a></li>
               <li><a href="{{ url_for('source_list') }}">Sources</a></li>
-              <li><a href="{{ url_for('orgchart') }}">Org Chart</a></li>
-              <li><a href="{{ url_for('familytree') }}">Family Tree</a></li>
+              <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Family Tree<span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="{{ url_for('familytree_primitives') }}">Family Tree</a></li>
+                    <li><a href="{{ url_for('familytreejs') }}">FamilytreeJS</a></li>
+                    <li><a href="{{ url_for('orgchart') }}">Org Chart</a></li>
+                  </ul>
+                </li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Maps <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
