Group people by name map; visualize some attrs in various places

--- a/wtfamily/templates/base.html
+++ b/wtfamily/templates/base.html
@@ -16,6 +16,8 @@
         body {
             margin-top: 50px;
         }
+        span.icon-male   { color: blue; }
+        span.icon-female { color: red; }
     </style>
 
     {% block head %}
