Add support for direct IDs in models and views

--- a/wtfamily/templates/citation_detail.html
+++ b/wtfamily/templates/citation_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block heading %}
-  {{ obj.title }}
+  Citation from {{ obj.source }}
 {% endblock %}
 
 {% block content %}
